@@ -37,6 +37,17 @@ http://vps.vps.niko.vivid/vps/componentedittest/Vpc_Basic_Text_Root/Vpc_Basic_Te
 - Inline: Default auswählen
 - Erwartet: bar wird wida schwarz
 
+*** Fett ***
+- url aufrufen http://vps.vps.niko.vivid/vps/componentedittest/Vpc_Basic_Text_Root/Vpc_Basic_Text_TestComponent/Index?componentId=1000
+- 'foo bar baz' in rte schreiben
+- bar markieren
+- 'B' klicken
+- Erwartet: bar wird fett
+- in HTML-Code-Ansicht umschalten
+- Erwartet: <strong>bar</strong>
+- zurückschalten
+- Erwartet: bar ist immer noch fett
+
 *** Cursor beim einfügen ***
 - url aufrufen: http://fnprofile.markus.vivid/vps/componentedittest/Vpc_Basic_Text_Root/Vpc_Basic_Text_TestComponent/Index?componentId=1000
 - 'Text' in Zwischenablage kopieren
