@@ -6,6 +6,7 @@ assets.Test.TestFiles = true
 [vivid : production]
 
 [dependencies]
+TestFiles.files[] = vps/css/web.css
 TestFiles.dep[] = VpsTestCore
 TestFiles.dep[] = ComponentsAdmin
 TestFiles.dep[] = VpsAutoForm
